--- a/watch-api/order-service/src/main/resources/application.properties
+++ b/watch-api/order-service/src/main/resources/application.properties
@@ -1,6 +1,12 @@
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/order_db
+#spring.datasource.username=root
+#spring.datasource.password=
+
 server.port = 8084
-spring.datasource.url=jdbc:mysql://localhost:3306/order_db
+spring.datasource.url=jdbc:mysql://mysqldb:3306/order_db
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=1234
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
+app.cors.allowed-origins: http://localhost:3000
