--- a/watch-api/product-service/src/main/resources/application.properties
+++ b/watch-api/product-service/src/main/resources/application.properties
@@ -1,16 +1,22 @@
-spring.datasource.url=jdbc:mysql://mysqldb:3306/product_db
-spring.datasource.username=mani
-spring.datasource.password=1234
+#spring.datasource.url=jdbc:mysql://mysqldb:3306/product_db
+#spring.datasource.username=mani
+#spring.datasource.password=1234
+
+
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 #spring.jpa.hibernate.ddl-auto=update
 server.port = 8083
-#spring.datasource.url=jdbc:mysql://localhost:3306/product_db
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.username=root
-#spring.datasource.password=
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/product_db
+spring.datasource.username=root
+spring.datasource.password=
+
+
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 app.cors.allowed-origins: http://localhost:3000
-# Enable CORS globally
 
