--- a/watch-api-backend/user-service/src/main/resources/application.properties
+++ b/watch-api-backend/user-service/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 server.port = 8080
-#spring.datasource.url=jdbc:mysql://localhost:3306/users_db
-#spring.datasource.username=root
-#spring.datasource.password=
-
-spring.datasource.url=jdbc:mysql://mysqldb:3306/user_db
+spring.datasource.url=jdbc:mysql://localhost:3306/users_db
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=
+
+#spring.datasource.url=jdbc:mysql://mysqldb:3306/user_db
+#spring.datasource.username=root
+#spring.datasource.password=1234
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
